--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -13,7 +13,7 @@ The source code of such languages can be later translated automatically into the
 For the development, maintenance and continuous adaptation of the DSL, experts are required. The knowledge of these people needs to be extended. If necessary, an external service may be used [01].
 %TODO quote
 
-\section{Definition of Ontology}
+\section{Definition of Ontology}\label{sec:app:ontology}
 Ontologies enable or improve the communication between computer systems, computer systems and humans, but also between people in a given domain. Ontology consists of mostly a defined basic vocabulary, definitions and entities that build on this basic vocabulary and a description of the existing relations among each other. The following figure \ref{fig:semiotic_triangle} illustrates the interaction between words (or more generally symbols), concepts and real things in the world [02]. %TODO quote
 \begin{figure}[h]
 	\centering
