--- a/feasability_study_for_a_environmental_modelling_language.tex
+++ b/feasability_study_for_a_environmental_modelling_language.tex
@@ -6,7 +6,7 @@
 \large HTW des Saarlandes\\
 Wintersemester 2012-2013\\
 Projektarbeit\\[10mm]
-{\LARGE Domine Specific Language}\\[10mm]
+{\LARGE Domain Specific Language}\\[10mm]
 Dozent: Prof. Dr. Ralf Denzer\\[10mm]Teilnehmer:
 }
 
