added parenthesises to the matricle number

--- a/feasability_study_for_a_environmental_modelling_language.tex
+++ b/feasability_study_for_a_environmental_modelling_language.tex
@@ -11,14 +11,14 @@ Dozent: Prof. Dr. Ralf Denzer\\[10mm]Teilnehmer:
 }
 
 \author{%
-Manhal Anwar 3479129\\[2mm]
-Gilles Baatz 3536491\\[2mm]
-Sergej Herzog 3502031\\[2mm]
-Bo Lin 3565556\\[2mm]
-Daniel Meiers 3538990\\[2mm]
-Jochen Palz 3479374\\[5mm]
-David Rupp 3502236\\[2mm]
-Oliver Wolf 3502007\\[2mm]
+Manhal Anwar (3479129)\\[2mm]
+Gilles Baatz (3536491)\\[2mm]
+Sergej Herzog (3502031)\\[2mm]
+Bo Lin (3565556)\\[2mm]
+Daniel Meiers (3538990)\\[2mm]
+Jochen Palz (3479374)\\[2mm]
+David Rupp (3502236)\\[2mm]
+Oliver Wolf (3502007)\\[2mm]
 }
 
 \date{31. March 2013}
