--- a/lib/libarchive.bib
+++ b/lib/libarchive.bib
@@ -219,6 +219,13 @@
 	url={http://en.wikipedia.org/wiki/Software_componentry}
 }
 
+@online{dsl:oms-handbook,
+	title={Object Modeling System v3.0 - Developer and User Handbook},
+	author={Olaf David, Jack R. Carlson, George H. Leavesley,James C. Ascough II, Frank W. Geter, Kenneth W. Rojas, Lajpat R. Ahuja},
+	urldate={2013-04-20},
+	url={http://oms.javaforge.com/download/OMSHandbook.pdf}
+}
+
 @Article{dsl:oms-ahuja,
 	AUTHOR = {Ahuja, L. R. and Ascough II, J. C. and David, O.},
 	TITLE = {Developing natural resource models using the object modeling system: feasibility and challenges},
@@ -320,28 +327,22 @@ URL = {http://www.adv-geosci.net/4/69/2005/},
 DOI = {10.5194/adgeo-4-69-2005}
 }
 
-@online{toolchain:ems-model-calibration,
+@online{toolchain:ems-model_calibration,
 	title={model calibration},
 	author={EMS},
 	urldate={2013-04-20},
 	url={http://www.ems-i.com/gmshelp/Model_Calibration/Model_Calibration.htm}
 }
 
-@online{toolchain:ems-pram-estimation,
+@online{toolchain:ems_pram_estimation,
 	title={Automated Parameter Estimation},
 	author={EMS},
 	urldate={2013-04-20},
 	url={http://www.ems-i.com/gmshelp/Model_Calibration/Parameter_Estimation/Automated_Parameter_Estimation.htm}
 }
 
-@online{toolchain:ems-pram-estimation,
-	title={Automated Parameter Estimation},
-	author={EMS},
-	urldate={2013-04-20},
-	url={http://www.ems-i.com/gmshelp/Model_Calibration/Parameter_Estimation/Automated_Parameter_Estimation.htm}
-}
 
-@online{toolchain:gms-overview,
+@online{toolchain:gms_overview,
 	title={GMS 6.5 Overview},
 	author={EMS},
 	urldate={2013-04-20},
