--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -1,6 +1,6 @@
 \chapter{Toolchain} \label{chap:toolchain}
 
-The overall idea on how to achieve a toolchain that fully supports the requirements described in section \ref{sec:requirements} and to supports the modeler in the modeling process is, to develop an integrated development environment like they are used in computer sciences and software development. IDE’s, such as the well known Eclipse IDE, Netbeans or MS Visual Studio  are a very common and crucial tools in the area of software development. They provide the software developer with a set of very useful tools and functionality such as code completion, syntax highlighting, debugging features and so on. All of these tools allow the software developer to manage much more complex software projects and increases its productivity. Based on the premiss that software developers are nothing else than “modeler of source code”, the similarity to the problems in the environmental modeling domain are obvious. This chapter tries to outline the idea of such a specialized IDE for environmental modeling. In order to do this, we decided to describe a workflow including the steps a modeller has to take, to define a model with such an IDE.
+The overall idea on how to achieve a toolchain that fully supports the requirements described in section \ref{sec:vision_for_a_dsl} and to supports the modeler in the modeling process is, to develop an integrated development environment like they are used in computer sciences and software development. IDE’s, such as the well known Eclipse IDE, Netbeans or MS Visual Studio  are a very common and crucial tools in the area of software development. They provide the software developer with a set of very useful tools and functionality such as code completion, syntax highlighting, debugging features and so on. All of these tools allow the software developer to manage much more complex software projects and increases its productivity. Based on the premiss that software developers are nothing else than “modeler of source code”, the similarity to the problems in the environmental modeling domain are obvious. This chapter tries to outline the idea of such a specialized IDE for environmental modeling. In order to do this, we decided to describe a workflow including the steps a modeller has to take, to define a model with such an IDE.
 
 
 A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modelling workflow that is more suitable and based on the steps necessary using an IDE for the modelling process.Picture \ref{fig:modeling_workflow} depicts this simplified modeling workflow.
@@ -12,7 +12,7 @@ A very extensive discussion of a modeling process can be found in \autocite{Jake
 \end{figure}
 
 
-We decided to start with the implementation of the model. Prior steps such as defining the model purpose, specifying model context and so on, like they are recommended in \autocite{Jakeman2006602} are left out intentionally in fact we want to emphasize the use of the IDE and to concentrate on the requirements derived from chapter \ref{sec:requirements}. In the following sections we want to explain the different steps and what features the IDE can offer to support the user in more detail. 
+We decided to start with the implementation of the model. Prior steps such as defining the model purpose, specifying model context and so on, like they are recommended in \autocite{Jakeman2006602} are left out intentionally in fact we want to emphasize the use of the IDE and to concentrate on the requirements derived from chapter \ref{sec:vision_for_a_dsl}. In the following sections we want to explain the different steps and what features the IDE can offer to support the user in more detail. 
 
 %TODO insert picture
 \begin{figure}[h]
@@ -22,7 +22,7 @@ We decided to start with the implementation of the model. Prior steps such as de
 \end{figure}
 
 \section{Writing a model}
-The modeler starts with the implementation/coding of the model. Since this is the most basic part of the IDE and the main interface for the user, this is the place to include the most relevant and crucial tools to support the user during the coding phase. These features are very diverse and range from very simple and basic ones like code completion, syntax highlighting, automatic warnings and action items to much more complex and specialized ones that belongs to the requirements from chapter \ref{sec:requirements}. One of these very specific features are domain specific semantic datatypes and the handling of typical operations as explained earlier. In order to achieve these features, it is necessary to define important semantical aspects of entities and datatypes used in the model.
+The modeler starts with the implementation/coding of the model. Since this is the most basic part of the IDE and the main interface for the user, this is the place to include the most relevant and crucial tools to support the user during the coding phase. These features are very diverse and range from very simple and basic ones like code completion, syntax highlighting, automatic warnings and action items to much more complex and specialized ones that belongs to the requirements from chapter \ref{sec:vision_for_a_dsl}. One of these very specific features are domain specific semantic datatypes and the handling of typical operations as explained earlier. In order to achieve these features, it is necessary to define important semantical aspects of entities and datatypes used in the model.
 
 
 A very common approach to define the semantics in a formal and machine readable way (which is important for later code generation) are ontologies (see \nameref{sec:app:ontology} for an short explanation of ontologies). The reasons for this are discussed in[literature research paper das das belegt]. And also in the environmental domain ontologies are often used and are a very common way to define semantics of entities. \autocite{dsl:muetzelfeldt}, \autocite{Villa2009577}
@@ -79,7 +79,7 @@ To complete this discussion, we want to call attention to another very important
 To put it in a nutshell, we think that this step is more a question of how to integrate the feature in a user friendly way and we do not see problems in the technical feasibility.
 
 \section{run and verifiy}
-Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeld}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way. \ref{sec:requirements}
+Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeld}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way. \ref{sec:vision_for_a_dsl}
 
 
 The model itselfs would define dataslots on which data sources can be attached. In chapter Second DSL Draft the describe statement is used to describe a mapping betewen one datatupel to an onther, like an mathematical funktion. Further these statemant can be used as dataslot. In this way a the belonging value is not mappend with an formula. In chapter \ref{sec:second_dsl_draft} the describe statement is used to define a mapping between a input datatupel and output datatupel. These mapping is done with a mathematical formula. Further the describe statement can be used as a dataslot. Used in this way the describe statements provide the modeller the possibility to connect to an other model or database which will handle the mapping between input and output data.Further the model metadata describes the structure of the input data which is expected. Based on these informations it is possible that the IDE generates an adapter from the available data sources to the model \autocite[81]{Villa2009577}. This process would be entirely transparent for the user. The user will just use a wizard dialog to plug all available data sources to the model using the drag and drop metaphor. All data sources which can not converted to a format the model expects would automatically marked as inappropriate. If one source, which the user wants to use is marked as inappropriate, he has to reconsider the model definition.
@@ -91,7 +91,7 @@ Another use case which requires a simple possible way to attach datasources is t
 The main function of the IDE aiming to run a model is to display the results of the simulation. Running the model means that the code generator generates the code which will be compiled and eventually executed. The IDE is able to choose the right presentation format e.g. the diagram type or a specific datatable format. These decision can be done on basis of the metadata which specifies the model output data. Of course it is possible to choose a format by your own.
 
 
-In \ref{sec:requirements}, it is described that the models and the calculation should be transparency and defensibility. That requirement could be solved by logging all intermediate results. This logging can be consulted to debug the model. For these purposes a tool which allows the user the interactive exploration of the logged data is imaginable. For example the user can filter values of one specific variable for each simulation step, or he can filter a set of variables for one specific time step. Further the tool could be able to visualise the data with charts and graphs or can provide some statistical information.This would help the modeler exploring the logged data and can be used for debugging purposes.
+In \ref{sec:vision_for_a_dsl}, it is described that the models and the calculation should be transparency and defensibility. That requirement could be solved by logging all intermediate results. This logging can be consulted to debug the model. For these purposes a tool which allows the user the interactive exploration of the logged data is imaginable. For example the user can filter values of one specific variable for each simulation step, or he can filter a set of variables for one specific time step. Further the tool could be able to visualise the data with charts and graphs or can provide some statistical information.This would help the modeler exploring the logged data and can be used for debugging purposes.
 
 
 Many models require a huge amount of computation power but some of these models can be written in a way which allows a parallel computation. Hence it seems to be conceivable that the IDE automatically recognizes if it is possible to distribute the calculation to multiple computers. These recognition would happens on basis of some keywords the DSL provides. Once the IDE knows that the computation is distributable the IDE can trigger the user to provide some additional information for the parallelization which can be for example credentials to a cloud provider. There is no need to use a specific Platform as a Service to deploy the model and run them in the cloud. The whole logic, which describes how the model is run on a virtual machine is known by the IDE. Hence the cloud provider must only provide a standardized infrastructure as a service. Because the vision of the DSL does not cover some distributed computation mechanisms these thoughts are not further proven.
