--- a/02c_oms.tex
+++ b/02c_oms.tex
@@ -91,7 +91,7 @@ The new version of the OMS framework 3.1 supports multiple threading. Each OMS3 
 \subsubsection{Advantages of OMS}
 \par
 The OMS framework provides the following benefits for model developers: [5]
-\begin{enumerate}
+\begin{itemize}
 \item The OMS framework enables efficient transfer of technology, because of the  integration of various software tools in one platform. Due to the common modeling platform and common user interface, the OMS will reduce the start-up time of model development and lower training costs of users.
 
 \item The OMS framework reduces the costs of developing new software technologies. With OMS, model developers can put scientific knowledge into packages as modules in OMS to build new customized software packages at a small fraction of costs.
@@ -100,11 +100,11 @@ The OMS framework provides the following benefits for model developers: [5]
 
 \item The OMS framework enhances productivity of researchers and scientists. Model developers now focus on the science module implementation, other than graphical user interface, deployment, etc, which helps to increase the productivity and quality.
 
-\end{enumerate}
+\end{itemize}
 \subsubsection{Disadvantages of OMS}
 \par
 Although the OMS framework provides various advantages for model developers, it also faces some difficulties. [5]
-\begin{enumerate}
+\begin{itemize}
 \item Model developers always lack of motivation to share model code, for example, the component libraries of environmental processes, environmental models, etc. Therefore, model developers have to build their own modules repositories or contribute to the OMS module library, so that they are available for other model developers to do further developments.
 
 \item It is hard to predict whether a modular coding structure will be accepted or not. It will take much time for model developers to pay attention to the module design, especially the input and output requirements, module structure, meta data description, and proper use of annotations. In this way, the quality and usability of the module will be guaranteed.
@@ -113,4 +113,4 @@ Although the OMS framework provides various advantages for model developers, it 
 
 \item Furthermore, it is hard to transplant models, which are developed with the OMS framework, to other framework platforms. The interoperation ability of the OMS framework is not good enough, to make the models also run on other platforms flawlessly.
 
-\end{enumerate}
+\end{itemize}
